update README and refine look and feel

--- a/src/main/resources/ApplicationMaster.html
+++ b/src/main/resources/ApplicationMaster.html
@@ -52,10 +52,7 @@
 				</td>
 			</tr>
 			<tr>
-				<td>=======></td>
-			</tr>
-			<tr>
-				<td><input type="text" id="shell_result" size="100"> </input></td>
+				<td><textarea id="shell_result" style="width:400px;height:400px;"> </textarea></td>
 			</tr>
 		</table>
 </body>
